be-get/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  get-deployment
  namespace: default
  labels:
    app:  get
spec:
  selector:
    matchLabels:
      app: get
  replicas: 2
  template:
    metadata:
      labels:
        app:  get
    spec:
      containers:
      - name:  get-pod
        image:  astelware/gr18:get
        ports:
        - containerPort:  8000
