be-get/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get-ingress
  namespace: default
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: g18get.astelware.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: get-service
            port:
              number: 80
